# multithreaded_matrix_multiplication

./: .gitignore  CMakeLists.txt  flat_matrix1.txt  flat_matrix2.txt  main.cpp  matrix.cpp  matrix.h  matrix1.txt  matrix2.txt
exception/: matrix_initialization_exception.cpp  matrix_initialization_exception.h  matrix_multiplication_exception.cpp  matrix_multiplication_exception.h  matrix_multiplication_result_exception.cpp  matrix_multiplication_result_exception.h
